# ChangeLog for media-sound/qmpdclient
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/qmpdclient/ChangeLog,v 1.17 2007/07/05 18:40:44 ticho Exp $

  05 Jul 2007; Andrej Kacian <ticho@gentoo.org>
  +files/1.0.8-argc-ref-fix.patch, qmpdclient-1.0.8.ebuild:
  Apply patch to fix a crasher bug for amd64 and possibly other arches.
  Provided by Davide Pesavento <davidepesa at gmail.com> in bug #183593.

*qmpdclient-1.0.8 (04 Jul 2007)

  04 Jul 2007; Andrej Kacian <ticho@gentoo.org> +qmpdclient-1.0.8.ebuild:
  Version bump. Ebuild improvements from bug #183593, by Davide Pesavento
  <davidepesa at gmail.com>. Dropped ~amd64 keyword, due to segfaults on that
  arch.

  26 May 2007; Jeroen Roovers <jer@gentoo.org> qmpdclient-1.0.7.ebuild:
  Stable for HPPA too.

  12 Apr 2007; Jeroen Roovers <jer@gentoo.org> qmpdclient-1.0.7.ebuild:
  Marked ~hppa (bug #158756).

  17 Feb 2007; Andrej Kacian <ticho@gentoo.org> -qmpdclient-1.0.5.ebuild,
  -qmpdclient-1.0.6.ebuild, -qmpdclient-1.0.6.1.ebuild,
  qmpdclient-1.0.7.ebuild:
  1.0.7 stable on x86. Removed obsolete ebuilds.

  26 Jan 2007; Jeroen Roovers <jer@gentoo.org> qmpdclient-1.0.6.2.ebuild:
  Stable for HPPA.

*qmpdclient-1.0.7 (21 Dec 2006)

  21 Dec 2006; Andrej Kacian <ticho@gentoo.org> +qmpdclient-1.0.7.ebuild:
  Version bump, bug #158732 by Sebastian <sebastian_ml at gmx.net>. Dropped
	~hppa keyword due to unsatisfied qt-4.2 dependency.

*qmpdclient-1.0.6.2 (21 Oct 2006)

  21 Oct 2006; Andrej Kacian <ticho@gentoo.org> +qmpdclient-1.0.6.2.ebuild:
  Version bump. Closes bug #152107, by Sebastian <sebastian_ml at gmx.net>.

*qmpdclient-1.0.6.1 (11 Oct 2006)

  11 Oct 2006; <ticho@gentoo.org> +qmpdclient-1.0.6.1.ebuild:
  Version bump. Install required files manually instead of using make install.
  Bug #150464, by Sebastian <sebastian_ml at gmx.net>.

*qmpdclient-1.0.6 (03 Oct 2006)
