@@ -16,14 +16,14 @@ EBUILD qmpdclient-1.0.7.ebuild 823 RMD160 6cd8d335cf735b673e6852d303a32b32309dec
 MD5 373ab7578ad33e836d34824e3a4d9d56 qmpdclient-1.0.7.ebuild 823
 RMD160 6cd8d335cf735b673e6852d303a32b32309decde qmpdclient-1.0.7.ebuild 823
 SHA256 d94ef9d7001dc4449ede2f5c29933f8e4a90e981667999da799aa6b09ba46527 qmpdclient-1.0.7.ebuild 823
-EBUILD qmpdclient-1.0.8.ebuild 1451 RMD160 cb984d48c6a71f096defcfc7bf2aa19463a9dc76 SHA1 3a75bdcb1c5777c31ab470bbc6e36a50437176c9 SHA256 f94dabcccead469a5162ac51a32c3f77831f5b3d490a056fa2d015e0f156d408
-MD5 f91347620b9d1c5d2aa847afb039ff64 qmpdclient-1.0.8.ebuild 1451
-RMD160 cb984d48c6a71f096defcfc7bf2aa19463a9dc76 qmpdclient-1.0.8.ebuild 1451
-SHA256 f94dabcccead469a5162ac51a32c3f77831f5b3d490a056fa2d015e0f156d408 qmpdclient-1.0.8.ebuild 1451
-MISC ChangeLog 3348 RMD160 8bbea6278280a3b1ed77b313c46bbd293004d5a8 SHA1 7d541199b525777355f2d9753120863e1867d5a2 SHA256 2a8848b366ae7a02176333f7fdab2e31737e338fde3beb167742953ed4f59a00
-MD5 d6d5e1e3361af079676b1983e198f88a ChangeLog 3348
-RMD160 8bbea6278280a3b1ed77b313c46bbd293004d5a8 ChangeLog 3348
-SHA256 2a8848b366ae7a02176333f7fdab2e31737e338fde3beb167742953ed4f59a00 ChangeLog 3348
+EBUILD qmpdclient-1.0.8.ebuild 1504 RMD160 288163c9acd912195c2c9b907b905d9a9cf7ed53 SHA1 bf189217934a95fdd5b3669741fa34b3d17cb051 SHA256 cb47b834b17107a4d855f7b4d963eaf454d92a533f4426b0945d72bbb0236a34
+MD5 e348352128ae025f7893185b50388925 qmpdclient-1.0.8.ebuild 1504
+RMD160 288163c9acd912195c2c9b907b905d9a9cf7ed53 qmpdclient-1.0.8.ebuild 1504
+SHA256 cb47b834b17107a4d855f7b4d963eaf454d92a533f4426b0945d72bbb0236a34 qmpdclient-1.0.8.ebuild 1504
+MISC ChangeLog 3533 RMD160 c038655e9c9b2eeb1876ae3b3e4ee707e85f7156 SHA1 4563a2c785d7a4e22c4c55467883cb9f0154d27d SHA256 5049c14bb71f8de34849fcac88614066ecaa80ef3bbb59f378baf60b2c22bda6
+MD5 01789b3f95b56e574c02b52ca882ecd8 ChangeLog 3533
+RMD160 c038655e9c9b2eeb1876ae3b3e4ee707e85f7156 ChangeLog 3533
+SHA256 5049c14bb71f8de34849fcac88614066ecaa80ef3bbb59f378baf60b2c22bda6 ChangeLog 3533
 MISC metadata.xml 312 RMD160 385fc14db78fefd87d894c15403e1356afd251f6 SHA1 bb45a55dde1a5d92ad5f4e5e9fff92f0d61971a6 SHA256 020f7c46ae8774fc31acda9fd827b37d8618787791b6d7abc3185177949f868d
 MD5 9e20747ca35ab90c184bea70fa4c151b metadata.xml 312
 RMD160 385fc14db78fefd87d894c15403e1356afd251f6 metadata.xml 312
@@ -40,7 +40,7 @@ SHA256 7dd95f0b460fa971d009e2d188b77c9bf576c5fce0ff4e47f1aa72f283571792 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFGjTsyQlM6RnzZP+IRAgOQAKDGPV1nc8EaYSJ2SsJ5g34HVVHn3ACeIw9X
-TBDZFchpLYQsaSihxruLyqU=
-=Apnz
+iD8DBQFGnMr5QlM6RnzZP+IRAlC4AJ9dOzmwFJKCHGHBB5oEBAdqO+cNrwCfT3/Z
+QChyDHrRM+P1uWSrznhIl0o=
+=WKMd
 -----END PGP SIGNATURE-----
