@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/qmpdclient/qmpdclient-1.0.8.ebuild,v 1.2 2007/07/05 18:40:44 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/qmpdclient/qmpdclient-1.0.8.ebuild,v 1.3 2007/07/17 13:58:15 ticho Exp $
 
 inherit eutils multilib qt4 toolchain-funcs
 
@@ -24,7 +24,7 @@ src_unpack() {
 
 	# Fix the install path
 	sed -i -e "s:PREFIX = /usr/local:PREFIX = /usr:" qmpdclient.pro \
-		|| die 'sed failed'
+		|| die "sed failed"
 }
 
 src_compile() {
@@ -32,7 +32,9 @@ src_compile() {
 	qmake qmpdclient.pro \
 		QTDIR=/usr/$(get_libdir) \
 		QMAKE=/usr/bin/qmake \
+		QMAKE_CC=$(tc-getCC) \
 		QMAKE_CXX=$(tc-getCXX) \
+		QMAKE_LINK=$(tc-getCXX) \
 		QMAKE_TARGET=release \
 		QMAKE_CFLAGS_RELEASE="${CFLAGS}" \
 		QMAKE_CXXFLAGS_RELEASE="${CXXFLAGS}" \
