@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/qmpdclient
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/qmpdclient/ChangeLog,v 1.17 2007/07/05 18:40:44 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/qmpdclient/ChangeLog,v 1.18 2007/07/17 13:58:15 ticho Exp $
+
+  17 Jul 2007; Andrej Kacian <ticho@gentoo.org> qmpdclient-1.0.8.ebuild:
+  Added QMAKE_CC and QMAKE_LINK to qmake call. By Davide Pesavento <davidepesa
+  at gmail.com> in bug #183593.
 
   05 Jul 2007; Andrej Kacian <ticho@gentoo.org>
   +files/1.0.8-argc-ref-fix.patch, qmpdclient-1.0.8.ebuild:
